fix: implement model mapper in atleta correctly